# bwsync

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  setup.cfg
bwsync/: cli.py
tests/: test_bwsync.py
